[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'SvgElement',       # 追加
  'SvgCircleElement', # 追加
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
]

